// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`password.sql > line 1 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "VariableSetStmt": {
          "args": [
            {
              "A_Const": {
                "location": 98,
                "sval": {
                  "sval": "novalue",
                },
              },
            },
          ],
          "kind": "VAR_SET_VALUE",
          "name": "password_encryption",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`password.sql > line 6 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "VariableSetStmt": {
          "args": [
            {
              "A_Const": {
                "location": 36,
                "sval": {
                  "sval": "true",
                },
              },
            },
          ],
          "kind": "VAR_SET_VALUE",
          "name": "password_encryption",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`password.sql > line 7 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "VariableSetStmt": {
          "args": [
            {
              "A_Const": {
                "location": 36,
                "sval": {
                  "sval": "md5",
                },
              },
            },
          ],
          "kind": "VAR_SET_VALUE",
          "name": "password_encryption",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`password.sql > line 8 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "VariableSetStmt": {
          "args": [
            {
              "A_Const": {
                "location": 33,
                "sval": {
                  "sval": "scram-sha-256",
                },
              },
            },
          ],
          "kind": "VAR_SET_VALUE",
          "name": "password_encryption",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`password.sql > line 9 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "VariableSetStmt": {
          "args": [
            {
              "A_Const": {
                "location": 69,
                "sval": {
                  "sval": "md5",
                },
              },
            },
          ],
          "kind": "VAR_SET_VALUE",
          "name": "password_encryption",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`password.sql > line 13 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "CreateRoleStmt": {
          "options": [
            {
              "DefElem": {
                "arg": {
                  "String": {
                    "sval": "role_pwd1",
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "password",
                "location": 29,
              },
            },
          ],
          "role": "regress_passwd1",
          "stmt_type": "ROLESTMT_ROLE",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`password.sql > line 14 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "CreateRoleStmt": {
          "options": [
            {
              "DefElem": {
                "arg": {
                  "String": {
                    "sval": "role_pwd2",
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "password",
                "location": 29,
              },
            },
          ],
          "role": "regress_passwd2",
          "stmt_type": "ROLESTMT_ROLE",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`password.sql > line 15 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "VariableSetStmt": {
          "args": [
            {
              "A_Const": {
                "location": 27,
                "sval": {
                  "sval": "scram-sha-256",
                },
              },
            },
          ],
          "kind": "VAR_SET_VALUE",
          "name": "password_encryption",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`password.sql > line 16 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "CreateRoleStmt": {
          "options": [
            {
              "DefElem": {
                "arg": {
                  "String": {
                    "sval": "role_pwd3",
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "password",
                "location": 29,
              },
            },
          ],
          "role": "regress_passwd3",
          "stmt_type": "ROLESTMT_ROLE",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`password.sql > line 17 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "CreateRoleStmt": {
          "options": [
            {
              "DefElem": {
                "defaction": "DEFELEM_UNSPEC",
                "defname": "password",
                "location": 29,
              },
            },
          ],
          "role": "regress_passwd4",
          "stmt_type": "ROLESTMT_ROLE",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`password.sql > line 18 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 557,
                "relname": "pg_authid",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "sortClause": [
            {
              "SortBy": {
                "location": -1,
                "node": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "rolname",
                        },
                      },
                    ],
                    "location": 621,
                  },
                },
                "sortby_dir": "SORTBY_DEFAULT",
                "sortby_nulls": "SORTBY_NULLS_DEFAULT",
              },
            },
            {
              "SortBy": {
                "location": -1,
                "node": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "rolpassword",
                        },
                      },
                    ],
                    "location": 630,
                  },
                },
                "sortby_dir": "SORTBY_DEFAULT",
                "sortby_nulls": "SORTBY_NULLS_DEFAULT",
              },
            },
          ],
          "targetList": [
            {
              "ResTarget": {
                "location": 368,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "rolname",
                        },
                      },
                    ],
                    "location": 368,
                  },
                },
              },
            },
            {
              "ResTarget": {
                "location": 377,
                "name": "rolpassword_masked",
                "val": {
                  "FuncCall": {
                    "args": [
                      {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "rolpassword",
                              },
                            },
                          ],
                          "location": 392,
                        },
                      },
                      {
                        "A_Const": {
                          "location": 405,
                          "sval": {
                            "sval": "(SCRAM-SHA-256)\\$(\\d+):([a-zA-Z0-9+/=]+)\\$([a-zA-Z0-9+=/]+):([a-zA-Z0-9+/=]+)",
                          },
                        },
                      },
                      {
                        "A_Const": {
                          "location": 486,
                          "sval": {
                            "sval": "\\1$\\2:<salt>$<storedkey>:<serverkey>",
                          },
                        },
                      },
                    ],
                    "funcformat": "COERCE_EXPLICIT_CALL",
                    "funcname": [
                      {
                        "String": {
                          "sval": "regexp_replace",
                        },
                      },
                    ],
                    "location": 377,
                  },
                },
              },
            },
          ],
          "whereClause": {
            "A_Expr": {
              "kind": "AEXPR_LIKE",
              "lexpr": {
                "ColumnRef": {
                  "fields": [
                    {
                      "String": {
                        "sval": "rolname",
                      },
                    },
                  ],
                  "location": 577,
                },
              },
              "location": 585,
              "name": [
                {
                  "String": {
                    "sval": "~~",
                  },
                },
              ],
              "rexpr": {
                "A_Const": {
                  "location": 590,
                  "sval": {
                    "sval": "regress_passwd%",
                  },
                },
              },
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`password.sql > line 30 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "RenameStmt": {
          "behavior": "DROP_RESTRICT",
          "newname": "regress_passwd2_new",
          "relationType": "OBJECT_ACCESS_METHOD",
          "renameType": "OBJECT_ROLE",
          "subname": "regress_passwd2",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`password.sql > line 33 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 76,
                "relname": "pg_authid",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "sortClause": [
            {
              "SortBy": {
                "location": -1,
                "node": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "rolname",
                        },
                      },
                    ],
                    "location": 144,
                  },
                },
                "sortby_dir": "SORTBY_DEFAULT",
                "sortby_nulls": "SORTBY_NULLS_DEFAULT",
              },
            },
            {
              "SortBy": {
                "location": -1,
                "node": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "rolpassword",
                        },
                      },
                    ],
                    "location": 153,
                  },
                },
                "sortby_dir": "SORTBY_DEFAULT",
                "sortby_nulls": "SORTBY_NULLS_DEFAULT",
              },
            },
          ],
          "targetList": [
            {
              "ResTarget": {
                "location": 46,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "rolname",
                        },
                      },
                    ],
                    "location": 46,
                  },
                },
              },
            },
            {
              "ResTarget": {
                "location": 55,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "rolpassword",
                        },
                      },
                    ],
                    "location": 55,
                  },
                },
              },
            },
          ],
          "whereClause": {
            "A_Expr": {
              "kind": "AEXPR_LIKE",
              "lexpr": {
                "ColumnRef": {
                  "fields": [
                    {
                      "String": {
                        "sval": "rolname",
                      },
                    },
                  ],
                  "location": 96,
                },
              },
              "location": 104,
              "name": [
                {
                  "String": {
                    "sval": "~~",
                  },
                },
              ],
              "rexpr": {
                "A_Const": {
                  "location": 109,
                  "sval": {
                    "sval": "regress_passwd2_new",
                  },
                },
              },
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`password.sql > line 38 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "RenameStmt": {
          "behavior": "DROP_RESTRICT",
          "newname": "regress_passwd2",
          "relationType": "OBJECT_ACCESS_METHOD",
          "renameType": "OBJECT_ROLE",
          "subname": "regress_passwd2_new",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`password.sql > line 39 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "VariableSetStmt": {
          "args": [
            {
              "A_Const": {
                "location": 115,
                "sval": {
                  "sval": "md5",
                },
              },
            },
          ],
          "kind": "VAR_SET_VALUE",
          "name": "password_encryption",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`password.sql > line 43 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "AlterRoleStmt": {
          "action": 1,
          "options": [
            {
              "DefElem": {
                "arg": {
                  "String": {
                    "sval": "foo",
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "password",
                "location": 49,
              },
            },
          ],
          "role": {
            "location": 33,
            "rolename": "regress_passwd2",
            "roletype": "ROLESPEC_CSTRING",
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`password.sql > line 46 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "AlterRoleStmt": {
          "action": 1,
          "options": [
            {
              "DefElem": {
                "arg": {
                  "String": {
                    "sval": "md5cd3578025fe2c3d7ed1b9a9b26238b70",
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "password",
                "location": 66,
              },
            },
          ],
          "role": {
            "location": 50,
            "rolename": "regress_passwd1",
            "roletype": "ROLESPEC_CSTRING",
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`password.sql > line 48 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "AlterRoleStmt": {
          "action": 1,
          "options": [
            {
              "DefElem": {
                "arg": {
                  "String": {
                    "sval": "SCRAM-SHA-256$4096:VLK4RMaQLCvNtQ==$6YtlR4t69SguDiwFvbVgVZtuz6gpJQQqUMZ7IQJK5yI=:ps75jrHeYU4lXCcXI4O8oIdJ3eO8o2jirjruw9phBTo=",
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "password",
                "location": 28,
              },
            },
          ],
          "role": {
            "location": 12,
            "rolename": "regress_passwd3",
            "roletype": "ROLESPEC_CSTRING",
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`password.sql > line 49 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "VariableSetStmt": {
          "args": [
            {
              "A_Const": {
                "location": 28,
                "sval": {
                  "sval": "scram-sha-256",
                },
              },
            },
          ],
          "kind": "VAR_SET_VALUE",
          "name": "password_encryption",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`password.sql > line 51 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "AlterRoleStmt": {
          "action": 1,
          "options": [
            {
              "DefElem": {
                "arg": {
                  "String": {
                    "sval": "foo",
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "password",
                "location": 52,
              },
            },
          ],
          "role": {
            "location": 36,
            "rolename": "regress_passwd4",
            "roletype": "ROLESPEC_CSTRING",
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`password.sql > line 53 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "CreateRoleStmt": {
          "options": [
            {
              "DefElem": {
                "arg": {
                  "String": {
                    "sval": "md5e73a4b11df52a6068f8b39f90be36023",
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "password",
                "location": 73,
              },
            },
          ],
          "role": "regress_passwd5",
          "stmt_type": "ROLESTMT_ROLE",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`password.sql > line 55 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "CreateRoleStmt": {
          "options": [
            {
              "DefElem": {
                "arg": {
                  "String": {
                    "sval": "SCRAM-SHA-256$1234",
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "password",
                "location": 139,
              },
            },
          ],
          "role": "regress_passwd6",
          "stmt_type": "ROLESTMT_ROLE",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`password.sql > line 59 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "CreateRoleStmt": {
          "options": [
            {
              "DefElem": {
                "arg": {
                  "String": {
                    "sval": "md5012345678901234567890123456789zz",
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "password",
                "location": 168,
              },
            },
          ],
          "role": "regress_passwd7",
          "stmt_type": "ROLESTMT_ROLE",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`password.sql > line 63 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "CreateRoleStmt": {
          "options": [
            {
              "DefElem": {
                "arg": {
                  "String": {
                    "sval": "md501234567890123456789012345678901zz",
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "password",
                "location": 47,
              },
            },
          ],
          "role": "regress_passwd8",
          "stmt_type": "ROLESTMT_ROLE",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`password.sql > line 65 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "VariableSetStmt": {
          "args": [
            {
              "A_Const": {
                "ival": {
                  "ival": 1024,
                },
                "location": 63,
              },
            },
          ],
          "kind": "VAR_SET_VALUE",
          "name": "scram_iterations",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`password.sql > line 68 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "CreateRoleStmt": {
          "options": [
            {
              "DefElem": {
                "arg": {
                  "String": {
                    "sval": "alterediterationcount",
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "password",
                "location": 29,
              },
            },
          ],
          "role": "regress_passwd9",
          "stmt_type": "ROLESTMT_ROLE",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`password.sql > line 69 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 198,
                "relname": "pg_authid",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "sortClause": [
            {
              "SortBy": {
                "location": -1,
                "node": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "rolname",
                        },
                      },
                    ],
                    "location": 262,
                  },
                },
                "sortby_dir": "SORTBY_DEFAULT",
                "sortby_nulls": "SORTBY_NULLS_DEFAULT",
              },
            },
            {
              "SortBy": {
                "location": -1,
                "node": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "rolpassword",
                        },
                      },
                    ],
                    "location": 271,
                  },
                },
                "sortby_dir": "SORTBY_DEFAULT",
                "sortby_nulls": "SORTBY_NULLS_DEFAULT",
              },
            },
          ],
          "targetList": [
            {
              "ResTarget": {
                "location": 9,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "rolname",
                        },
                      },
                    ],
                    "location": 9,
                  },
                },
              },
            },
            {
              "ResTarget": {
                "location": 18,
                "name": "rolpassword_masked",
                "val": {
                  "FuncCall": {
                    "args": [
                      {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "rolpassword",
                              },
                            },
                          ],
                          "location": 33,
                        },
                      },
                      {
                        "A_Const": {
                          "location": 46,
                          "sval": {
                            "sval": "(SCRAM-SHA-256)\\$(\\d+):([a-zA-Z0-9+/=]+)\\$([a-zA-Z0-9+=/]+):([a-zA-Z0-9+/=]+)",
                          },
                        },
                      },
                      {
                        "A_Const": {
                          "location": 127,
                          "sval": {
                            "sval": "\\1$\\2:<salt>$<storedkey>:<serverkey>",
                          },
                        },
                      },
                    ],
                    "funcformat": "COERCE_EXPLICIT_CALL",
                    "funcname": [
                      {
                        "String": {
                          "sval": "regexp_replace",
                        },
                      },
                    ],
                    "location": 18,
                  },
                },
              },
            },
          ],
          "whereClause": {
            "A_Expr": {
              "kind": "AEXPR_LIKE",
              "lexpr": {
                "ColumnRef": {
                  "fields": [
                    {
                      "String": {
                        "sval": "rolname",
                      },
                    },
                  ],
                  "location": 218,
                },
              },
              "location": 226,
              "name": [
                {
                  "String": {
                    "sval": "~~",
                  },
                },
              ],
              "rexpr": {
                "A_Const": {
                  "location": 231,
                  "sval": {
                    "sval": "regress_passwd%",
                  },
                },
              },
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`password.sql > line 74 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "CreateRoleStmt": {
          "options": [
            {
              "DefElem": {
                "arg": {
                  "String": {
                    "sval": "",
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "password",
                "location": 84,
              },
            },
          ],
          "role": "regress_passwd_empty",
          "stmt_type": "ROLESTMT_ROLE",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`password.sql > line 77 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "AlterRoleStmt": {
          "action": 1,
          "options": [
            {
              "DefElem": {
                "arg": {
                  "String": {
                    "sval": "md585939a5ce845f1a1b620742e3c659e0a",
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "password",
                "location": 33,
              },
            },
          ],
          "role": {
            "location": 12,
            "rolename": "regress_passwd_empty",
            "roletype": "ROLESPEC_CSTRING",
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`password.sql > line 78 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "AlterRoleStmt": {
          "action": 1,
          "options": [
            {
              "DefElem": {
                "arg": {
                  "String": {
                    "sval": "SCRAM-SHA-256$4096:hpFyHTUsSWcR7O9P$LgZFIt6Oqdo27ZFKbZ2nV+vtnYM995pDh9ca6WSi120=:qVV5NeluNfUPkwm7Vqat25RjSPLkGeoZBQs6wVv+um4=",
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "password",
                "location": 33,
              },
            },
          ],
          "role": {
            "location": 12,
            "rolename": "regress_passwd_empty",
            "roletype": "ROLESPEC_CSTRING",
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`password.sql > line 79 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 25,
                "relname": "pg_authid",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "rolpassword",
                        },
                      },
                    ],
                    "location": 8,
                  },
                },
              },
            },
          ],
          "whereClause": {
            "A_Expr": {
              "kind": "AEXPR_OP",
              "lexpr": {
                "ColumnRef": {
                  "fields": [
                    {
                      "String": {
                        "sval": "rolname",
                      },
                    },
                  ],
                  "location": 41,
                },
              },
              "location": 48,
              "name": [
                {
                  "String": {
                    "sval": "=",
                  },
                },
              ],
              "rexpr": {
                "A_Const": {
                  "location": 49,
                  "sval": {
                    "sval": "regress_passwd_empty",
                  },
                },
              },
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`password.sql > line 80 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "CreateRoleStmt": {
          "options": [
            {
              "DefElem": {
                "arg": {
                  "String": {
                    "sval": "SCRAM-SHA-256$4096:A6xHKoH/494E941doaPOYg==$Ky+A30sewHIH3VHQLRN9vYsuzlgNyGNKCh37dy96Rqw=:COPdlNiIkrsacU5QoxydEuOH6e/KfiipeETb/bPw8ZI=",
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "password",
                "location": 202,
              },
            },
          ],
          "role": "regress_passwd_sha_len0",
          "stmt_type": "ROLESTMT_ROLE",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`password.sql > line 86 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "CreateRoleStmt": {
          "options": [
            {
              "DefElem": {
                "arg": {
                  "String": {
                    "sval": "SCRAM-SHA-256$4096:A6xHKoH/494E941doaPOYg==$Ky+A30sewHIH3VHQLRN9vYsuzlgNyGNKCh37dy96RqwAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA=:COPdlNiIkrsacU5QoxydEuOH6e/KfiipeETb/bPw8ZI=",
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "password",
                "location": 37,
              },
            },
          ],
          "role": "regress_passwd_sha_len1",
          "stmt_type": "ROLESTMT_ROLE",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`password.sql > line 87 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "CreateRoleStmt": {
          "options": [
            {
              "DefElem": {
                "arg": {
                  "String": {
                    "sval": "SCRAM-SHA-256$4096:A6xHKoH/494E941doaPOYg==$Ky+A30sewHIH3VHQLRN9vYsuzlgNyGNKCh37dy96Rqw=:COPdlNiIkrsacU5QoxydEuOH6e/KfiipeETb/bPw8ZIAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA=",
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "password",
                "location": 37,
              },
            },
          ],
          "role": "regress_passwd_sha_len2",
          "stmt_type": "ROLESTMT_ROLE",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`password.sql > line 88 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 214,
                "relname": "pg_authid",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "sortClause": [
            {
              "SortBy": {
                "location": -1,
                "node": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "rolname",
                        },
                      },
                    ],
                    "location": 286,
                  },
                },
                "sortby_dir": "SORTBY_DEFAULT",
                "sortby_nulls": "SORTBY_NULLS_DEFAULT",
              },
            },
          ],
          "targetList": [
            {
              "ResTarget": {
                "location": 119,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "rolname",
                        },
                      },
                    ],
                    "location": 119,
                  },
                },
              },
            },
            {
              "ResTarget": {
                "location": 128,
                "name": "is_rolpassword_rehashed",
                "val": {
                  "A_Expr": {
                    "kind": "AEXPR_LIKE",
                    "lexpr": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "rolpassword",
                            },
                          },
                        ],
                        "location": 128,
                      },
                    },
                    "location": 140,
                    "name": [
                      {
                        "String": {
                          "sval": "!~~",
                        },
                      },
                    ],
                    "rexpr": {
                      "A_Const": {
                        "location": 149,
                        "sval": {
                          "sval": "%A6xHKoH/494E941doaPOYg==%",
                        },
                      },
                    },
                  },
                },
              },
            },
          ],
          "whereClause": {
            "A_Expr": {
              "kind": "AEXPR_LIKE",
              "lexpr": {
                "ColumnRef": {
                  "fields": [
                    {
                      "String": {
                        "sval": "rolname",
                      },
                    },
                  ],
                  "location": 234,
                },
              },
              "location": 242,
              "name": [
                {
                  "String": {
                    "sval": "~~",
                  },
                },
              ],
              "rexpr": {
                "A_Const": {
                  "location": 247,
                  "sval": {
                    "sval": "regress_passwd_sha_len%",
                  },
                },
              },
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`password.sql > line 95 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "DropRoleStmt": {
          "roles": [
            {
              "RoleSpec": {
                "location": 12,
                "rolename": "regress_passwd1",
                "roletype": "ROLESPEC_CSTRING",
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`password.sql > line 97 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "DropRoleStmt": {
          "roles": [
            {
              "RoleSpec": {
                "location": 11,
                "rolename": "regress_passwd2",
                "roletype": "ROLESPEC_CSTRING",
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`password.sql > line 98 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "DropRoleStmt": {
          "roles": [
            {
              "RoleSpec": {
                "location": 11,
                "rolename": "regress_passwd3",
                "roletype": "ROLESPEC_CSTRING",
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`password.sql > line 99 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "DropRoleStmt": {
          "roles": [
            {
              "RoleSpec": {
                "location": 11,
                "rolename": "regress_passwd4",
                "roletype": "ROLESPEC_CSTRING",
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`password.sql > line 100 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "DropRoleStmt": {
          "roles": [
            {
              "RoleSpec": {
                "location": 11,
                "rolename": "regress_passwd5",
                "roletype": "ROLESPEC_CSTRING",
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`password.sql > line 101 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "DropRoleStmt": {
          "roles": [
            {
              "RoleSpec": {
                "location": 11,
                "rolename": "regress_passwd6",
                "roletype": "ROLESPEC_CSTRING",
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`password.sql > line 102 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "DropRoleStmt": {
          "roles": [
            {
              "RoleSpec": {
                "location": 11,
                "rolename": "regress_passwd7",
                "roletype": "ROLESPEC_CSTRING",
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`password.sql > line 103 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "DropRoleStmt": {
          "roles": [
            {
              "RoleSpec": {
                "location": 11,
                "rolename": "regress_passwd8",
                "roletype": "ROLESPEC_CSTRING",
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`password.sql > line 104 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "DropRoleStmt": {
          "roles": [
            {
              "RoleSpec": {
                "location": 11,
                "rolename": "regress_passwd9",
                "roletype": "ROLESPEC_CSTRING",
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`password.sql > line 105 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "DropRoleStmt": {
          "roles": [
            {
              "RoleSpec": {
                "location": 11,
                "rolename": "regress_passwd_empty",
                "roletype": "ROLESPEC_CSTRING",
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`password.sql > line 106 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "DropRoleStmt": {
          "roles": [
            {
              "RoleSpec": {
                "location": 11,
                "rolename": "regress_passwd_sha_len0",
                "roletype": "ROLESPEC_CSTRING",
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`password.sql > line 107 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "DropRoleStmt": {
          "roles": [
            {
              "RoleSpec": {
                "location": 11,
                "rolename": "regress_passwd_sha_len1",
                "roletype": "ROLESPEC_CSTRING",
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`password.sql > line 108 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "DropRoleStmt": {
          "roles": [
            {
              "RoleSpec": {
                "location": 11,
                "rolename": "regress_passwd_sha_len2",
                "roletype": "ROLESPEC_CSTRING",
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`password.sql > line 109 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 79,
                "relname": "pg_authid",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "sortClause": [
            {
              "SortBy": {
                "location": -1,
                "node": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "rolname",
                        },
                      },
                    ],
                    "location": 143,
                  },
                },
                "sortby_dir": "SORTBY_DEFAULT",
                "sortby_nulls": "SORTBY_NULLS_DEFAULT",
              },
            },
            {
              "SortBy": {
                "location": -1,
                "node": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "rolpassword",
                        },
                      },
                    ],
                    "location": 152,
                  },
                },
                "sortby_dir": "SORTBY_DEFAULT",
                "sortby_nulls": "SORTBY_NULLS_DEFAULT",
              },
            },
          ],
          "targetList": [
            {
              "ResTarget": {
                "location": 49,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "rolname",
                        },
                      },
                    ],
                    "location": 49,
                  },
                },
              },
            },
            {
              "ResTarget": {
                "location": 58,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "rolpassword",
                        },
                      },
                    ],
                    "location": 58,
                  },
                },
              },
            },
          ],
          "whereClause": {
            "A_Expr": {
              "kind": "AEXPR_LIKE",
              "lexpr": {
                "ColumnRef": {
                  "fields": [
                    {
                      "String": {
                        "sval": "rolname",
                      },
                    },
                  ],
                  "location": 99,
                },
              },
              "location": 107,
              "name": [
                {
                  "String": {
                    "sval": "~~",
                  },
                },
              ],
              "rexpr": {
                "A_Const": {
                  "location": 112,
                  "sval": {
                    "sval": "regress_passwd%",
                  },
                },
              },
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;
